--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>HTML Sample</title>
   </head>
   <body>
-    <h1>Hi there!</h1>
+    <h1>Hi there!!!</h1> <img src="img/darth-vader-starwars-rise-74.jpg" alt="Darth Vader">
+
   </body>
 </html>
