--- a/index.html
+++ b/index.html
@@ -16,15 +16,39 @@
         background: linear-gradient(100deg, rgb(184, 3, 12), rgb(50, 187, 211)) ;
         color: honeydew;
         font-family: 'Antonio', sans-serif;
+      }
+
+      header {
         text-align: center;
-        margin: 100px 300px;
       }
       img {
         width: 400px;
         border-radius: 30%;
+        text-align: center;
       }
+      main {
+        background: linear-gradient(100deg, rgb(50, 187, 211), rgb(184, 3, 12));
+        padding: 32px;
+        margin: 32px auto;
+        width: 700px;
+        border-radius: 8px;
+      }
+     
       ul {
+        margin: 0;
+        padding: 0;
         list-style: none;
+      }
+
+      ol {
+        margin: 0;
+        padding: 0;
+      }
+
+      li {
+        margin: 14px 0;
+        padding-left: 10px;
+        border-left: 5px;
       }
       
       footer ul {
@@ -42,10 +66,13 @@
         height: 100%;
       }
     </style>
+    <header>
     <h1>Hi there!!!</h1>
     <a href="https://en.wikipedia.org/wiki/Darth_Vader"
       ><img src="img/luke-i-am-your-father.jpg" alt="Darth Vader"
     /></a>
+  </header>
+    <main>
     <p>
       Darth Vader is a fictional character in the Star Wars franchise. The
       character is the central antagonist of the original trilogy and, as Anakin
@@ -101,6 +128,7 @@
       <input type="text" placeholder="Your option" required />
       <button type="submit">Submit</button>
     </div>
+  </main>
     <footer>
       <ul>
         <li>
