--- a/index.html
+++ b/index.html
@@ -111,17 +111,17 @@
     </div>
     <div>
       <p>Favorite character in Star Wars:</p>
-      <label for="Darth Vader"
+      <label 
         ><input type="checkbox" name="personality" value="Darth Vader" /> Darth Vader</label
       >
-      <label for="Yoda"
+      <label 
         ><input type="checkbox" name="personality" value="Yoda" /> Yoda</label
       >
-      <label for="Luke"
+      <label 
         ><input type="checkbox" name="personality" value="Luke" /> Luke
         Skywalker</label
       >
-      <label for="Ewok"
+      <label 
         ><input type="checkbox" name="personality" value="Ewok" /> Ewok</label
       >
       
